<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:backgroundTint="@color/pinkk">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QRGeneratorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        style="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qrcode"
        android:layout_width="290dp"
        android:layout_height="240dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
        app:srcCompat="@android:drawable/screen_background_light_transparent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/qrcode">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_barang"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/qrInput1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/masukkan_nama_barang"
            android:textColor="@color/grey"
            android:layout_marginStart="6dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kondisi_barang"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/qrInput2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/masukkan_kondisi_barang"
            android:textColor="@color/grey"
            android:layout_marginStart="6dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harga_barang"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/qrInput3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/masukkan_harga_barang"
            android:textColor="@color/grey"
            android:layout_marginStart="6dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_pembelian"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/qrInput4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/masukkan_tanggal_pembelian"
            android:textColor="@color/grey"
            android:layout_marginStart="6dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serial_number"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/qrInput5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/masukkan_serial_number"
            android:textColor="@color/grey"
            android:layout_marginStart="6dp"
            android:textSize="14sp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_generate"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#000000"
        android:text="@string/generate_qr_code"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.937" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>