<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="280dp"
            android:layout_height="126dp"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/tagme_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/academic_font"
            android:gravity="center"
            android:textSize="37dp"
            android:text="@string/app_name"
            android:textColor="@color/title_color" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/tutorial_app"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="28dp"
            android:text="@string/create_qr_code"
            android:textColor="#FF1744"
            android:textSize="23dp"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/class_titles_font"

            android:gravity="center"
            android:text="@string/text_membuat_qr_code"
            android:textColor="@color/black"
            android:textSize="19dp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="310dp"
            android:layout_height="250dp"
            android:src="@drawable/generatecode"
            android:layout_gravity="center"
            android:paddingTop="6dp" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="30dp"
            android:text="@string/scan_qr_code"
            android:textColor="#FF1744"
            android:textSize="23dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/class_titles_font"
            android:gravity="center"
            android:text="@string/text_scan_qr_code"
            android:textColor="@color/black"
            android:textSize="19dp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="310dp"
            android:layout_height="250dp"
            android:src="@drawable/scancode"
            android:layout_gravity="center"
            android:paddingTop="6dp" />

    </LinearLayout>
</ScrollView>